--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,8 +12,8 @@
     <h1> Tic Tac Toe</h1>
     <!-- <h3 id= win> </h3> -->
     <p>
-        player 1: <br/>
-        player 2:
+        <div id="p1"><input id="p1p" type="text" ><span id="scr1"> 0</span></div>
+        <div id="p2"><input type="text" ><span id="scr2"> 0</span></div>
     </p>
     <div class ='playerTurn'></div>
     <center><button id="reset">reset</button></center>
