--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,11 +12,14 @@
     <h1> Tic Tac Toe</h1>
     <!-- <h3 id= win> </h3> -->
     <p>
-        <div id="p1"><input id="p1p" type="text" ><span id="scr1"> 0</span></div>
-        <div id="p2"><input type="text" ><span id="scr2"> 0</span></div>
+        <h4>enter your names:</h4>
+        <div id="p1">X </h4><input id="p1p" type="text" ><span id="scr1"> 0</span></div>
+        <div id="p2">O <input id="p2p" type="text" ><span id="scr2"> 0</span></div>
     </p>
     <div class ='playerTurn'></div>
     <center><button id="reset">reset</button></center>
+    <center><button id="newGame">new game</button></center>
+
     <div class="bigc">
     <div class="container">
         <div class="grid">
