--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <script src="/scripts/apps.js"></script>
+    <script src="./scripts/apps.js"></script>
 </head>
 <body>
     <h1> Tic Tac Toe</h1>
